k8s/apps/default/prowlarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      hostname: prowlarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: prowlarr
          image: ghcr.io/home-operations/prowlarr:2.6.4.5611@sha256:a5b8031268268b9d3a121c49ea7cc89248538e6379a3e29b0d419489bd95e004
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 500m
              memory: 768Mi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 9696
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
